--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             </div>
         </div>
     </div>
-    <a href="./index_2.html">second</a>
+    <p>
+        <strong><a href="./index_2.html">s</a> <= Aki fica a segunda tela, coisa rápida!!!
+    </p>
+    
 </body>
 </html>
