--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         </div>
     </div>
     <p>
-        <strong><a href="./index_2.html">s</a> <= Aki fica a segunda tela, coisa rápida!!!
+        <strong><a href="./index_2.html">Outra Tela</a> </strong>>
+            <= Aki fica a segunda tela, coisa rápida!!!
     </p>
     
 </body>
