--- a/index.html
+++ b/index.html
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta name="description" content="Some implementations of filtes for image processing">
+    <meta name="description" content="First Steps in Image Processing">
     <meta name="keywords" content="Image Processing, Computer Graphics, UENP, JavaScript">
-    <meta name="author" content="Dairon Juraski">
+    <meta name="author" content="Bárbara Santana & Dairon Juraski">
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filters</title>
+    <title>Image Processing</title>
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <script src="./filters_js/main.js" defer></script>
+    <script src="filters_js/collectFile.js" defer></script>
+    <script src="filters_js/filters.js" defer></script>
 </head>
+
 <body>
+    <input id="imgInput" class="btn btn-success" type="file" accept="image/*" />
+
     <div class="container mx-auto">
-        <h1 class="text-center font-bold text-2xl"> Some Filters for Image Processing</h1>
+        <h1 class="text-center font-sans text-5xl">Image Processing</h1>
         <div class="mb-4 mt-4">
-            <button class="bg-red-900 text-white py-1 px-2" 
-                id="btnLoad">Load image</button>
-            <button class="bg-gray-400 text-white py-1 px-2" 
-                id="btnGray">Grayscale</button>
-            <button class="bg-gray-500 text-white py-1 px-2" 
-                id="btnGrayCIE">Grayscale CIE</button>
-            <button class="bg-gray-700 text-white py-1 px-2" 
-                id="btnGrayNTSC">Grayscale NTSC</button>
-            <button class="bg-gray-900 text-white py-1 px-2" 
-                id="btnMono">Monochromatic</button>
+            <button class="bg-blue-500 hover:bg-blue-700 text-white py-1 px-2 rounded"
+                id="btnLoad">Load Image
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnRotate">Rotate Image
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnGaussian">Gaussian Blur
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnMedian">Median
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnMean">Mean
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnGray">Gray
+            </button>
+            <!-- <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnMeanGray">Mean Gray Scale -->
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnGrayNTSC">Gray Scale NTSC
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnMS">Binarization
+            </button>
+            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnR5">Resize_50%
+            </button>
+
         </div>
         <div class="flex">
-            <div class="w-1/2 border-2 p-3 mr-3">
-                <img id="image" src="./images/clown-fish.jpg"/>
+            <div class="w-1/2 p-3 mr-3">
+                <h1 class="font-sans text-3xl text-center pb-4">Original</h1>
+                <canvas id="image" class="m-auto"></canvas>
             </div>
-            <div class="w-1/2 border-2 p-3">
-                <canvas id="image-canvas"></canvas>
+            <div class="w-1/2 p-3">
+                <h1 class="font-sans text-3xl text-center pb-4">Treated</h1>
+                <canvas id="image-canvas" class="m-auto"></canvas>
             </div>
-            <div class="w-1/2 border-2 p-3">
-                <canvas id="image-canvasCIE"></canvas>
-            </div>
-            <div class="w-1/2 border-2 p-3">
-                <canvas id="image-canvasNTSC"></canvas>
+            <div class="w-1/2 p-3">
+                <h1 class="font-sans text-3xl text-center pb-4">Compare</h1>
+                <canvas id="compare" class="m-auto"></canvas>
             </div>
         </div>
     </div>
-    <p>
-        <strong><a href="./index_2.html">Outra Tela</a> </strong>>
-            <= Aki fica a segunda tela, coisa rápida!!!
-    </p>
-    
+
 </body>
+
 </html>
