--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Image Processing</title>
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/dracula.css">
     <script src="filters_js/collectFile.js" defer></script>
     <script src="filters_js/filters.js" defer></script>
+    
 </head>
 
 <body>
@@ -48,7 +50,7 @@
                 id="btnMS">Binarization
             </button>
             <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
-                id="btnR5">Resize_50%
+                id="btnR5">Resize_0%
             </button>
 
         </div>
