Adding new functions and new look!

--- a/index.html
+++ b/index.html
@@ -10,66 +10,81 @@
     <title>Image Processing</title>
 
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/dracula.css">
-    <script src="filters_js/collectFile.js" defer></script>
-    <script src="filters_js/filters.js" defer></script>
+    <link rel="shortcut icon" type="image" href="/images/favicon.ico"/>
     
+    <script src="/filters_js/collectFile.js" defer></script>
+    <script src="/filters_js/filters.js" defer></script>
+
 </head>
 
-<body>
-    <input id="imgInput" class="btn btn-success" type="file" accept="image/*" />
-
+<body class="bg-gradient-to-r from-black to-gray-800">
     <div class="container mx-auto">
-        <h1 class="text-center font-sans text-5xl">Image Processing</h1>
+        <h1 class="text-center text-white font-sans text-5xl">Image Processing</h1>
+        <input id="imgInput" class="bg-red-800 btn btn-success mx-auto text-white" type="file" accept="image/*" />
         <div class="mb-4 mt-4">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white py-1 px-2 rounded"
+
+            <button class="bg-green-600 hover:bg-green-400 text-white py-1 px-2 rounded"
                 id="btnLoad">Load Image
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnRotate">Rotate Image
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnGaussian">Gaussian Blur
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnMedian">Median
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnMean">Mean
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnGray">Gray
             </button>
-            <!-- <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
-                id="btnMeanGray">Mean Gray Scale -->
+
+            <!-- <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnMeanGray">Channel Gray Scale -->
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnGrayNTSC">Gray Scale NTSC
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
                 id="btnMS">Binarization
             </button>
-            <button class="bg-blue-400 hover:bg-blue-600 text-white py-1 px-2 rounded"
-                id="btnR5">Resize_0%
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnRS"> Resize
+            </button>
+
+            <button class="bg-blue-800 hover:bg-blue-600 text-white py-1 px-2 rounded"
+                id="btnCp"> Compare
             </button>
 
         </div>
         <div class="flex">
             <div class="w-1/2 p-3 mr-3">
-                <h1 class="font-sans text-3xl text-center pb-4">Original</h1>
+                <h1 class="font-sans text-3xl text-center text-white pb-4"> Original </h1>
+                <!-- <img id="image" src="images/gray-cat.jpg" class="m-auto" /> -->
                 <canvas id="image" class="m-auto"></canvas>
             </div>
             <div class="w-1/2 p-3">
-                <h1 class="font-sans text-3xl text-center pb-4">Treated</h1>
+                <h1 class="font-sans text-3xl text-center text-white pb-4"> Treated </h1>
                 <canvas id="image-canvas" class="m-auto"></canvas>
             </div>
             <div class="w-1/2 p-3">
-                <h1 class="font-sans text-3xl text-center pb-4">Compare</h1>
+                <h1 class="font-sans text-3xl text-center text-white pb-4"> Compare </h1>
                 <canvas id="compare" class="m-auto"></canvas>
             </div>
         </div>
-    </div>
 
+    </div>
 </body>
 
 </html>
