--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="shortcut icon" type="image" href="./images/favicon.ico"/>
     
-    <script src="./filters_js/collectFile.js" defer></script>
-    <script src="./filters_js/filters.js" defer></script>
+    <script src="/filters_js/collectFile.js" defer></script>
+    <script src="/filters_js/filters.js" defer></script>
 
 </head>
 
